--- a/templates/student/base1.html
+++ b/templates/student/base1.html
@@ -28,8 +28,8 @@
                     <li class="nav-item">
                         <a class="nav-link {% block homeActive %}{% endblock homeActive %}" aria-current="page" href="/student">Home</a>
                     </li>
-                    <li class="nav-item">
-                        <a class="nav-link {% block wishListActive %}{% endblock wishListActive %}" aria-current="page" href={% url 'wishList' %}>wishlist</a>
+                    <li class="nav-item" >
+                        <a id="wishList" class="nav-link {% block wishListActive %}{% endblock wishListActive %}" aria-current="page" href={% url 'wishList' %}>wishlist</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link {% block profileActive %}{% endblock profileActive %}" aria-current="page" href={% url 'profile' %}>profile</a>
