--- a/templates/student/wishlist.html
+++ b/templates/student/wishlist.html
@@ -103,6 +103,7 @@
         localStorage.setItem('obj', JSON.stringify(books));
         let book=document.getElementById(id);
         book.style.display="none";
+        refreshList()
     }
 </script>
 {% endblock js %}
